<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="message">Please enter your name.</string>
    <string name="tv_question">What color does this flag belong to?</string>
    <string name="finish">FINISH</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="result">Result</string>
    <string name="submit">Submit</string>
</resources>