<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_back"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ResultActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/labelResult"
            android:text="@string/result"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/sky_blue"
            android:fontFamily="@font/molot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/ivCongratulations"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/trophy"
            android:contentDescription="image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/congratulations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hey_congratulations"
            android:textSize="24sp"
            android:fontFamily="@font/molot"
            android:textStyle="bold"
            android:textColor="@color/yellow"/>

        <TextView
            android:id="@+id/tvName"
            android:textSize="20sp"
            android:textColor="@color/sky_blue"
            android:fontFamily="@font/molot"
            tools:text="Name"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvScore"
            android:textSize="16sp"
            tools:text="Your score is 0 out of 9."
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textStyle="bold|normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFinish"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/finish"
            android:textSize="20sp"
            android:textColor="@color/black_olive"
            android:fontFamily="@font/molot"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>



</LinearLayout>