<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_back"
    android:gravity="center"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/quizApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/molot"
        android:textColor="@color/yellow"/>
    
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        app:cardCornerRadius="30dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:textStyle="normal"
                android:gravity="center"
                android:fontFamily="@font/molot"
                android:textColor="@color/black_olive"/>

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/black_olive"/>
            
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="20dp"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="e.g. Max"
                    android:inputType="textCapWords"
                    android:textColor="@color/black_olive"
                    android:textColorHint="#7A8089"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="Start"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black_olive"
                android:fontFamily="@font/molot"
                >
            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>